--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,27 @@
+### project specific ###
+node/
+npm-debug.log
+
+### Intellij ###
+.idea
+*.iml
 target/
 
-.idea/
-/out/
-*/out/
 
-*/*.iml
-*.iml
-
-git.properties
-
-npm-debug.log
-*.classpath
-*.project
-org.eclipse.core.resources.prefs
-org.eclipse.jdt.core.prefs
-org.eclipse.jdt.groovy.core.prefs
-org.eclipse.wst.common.component
-org.eclipse.wst.common.project.facet.core.xml
+### Eclipse ###
+.metadata
+.project
 .settings/
-logs/
-node_modules/
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
