--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,7 +22,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.0.0.RC1</version>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -93,6 +93,7 @@
 
     <properties>
         <java.version>1.9</java.version>
+        <spring.boot.version>2.0.0.RC1</spring.boot.version>
     </properties>
 
     <build>
@@ -105,6 +106,11 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
